--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,13 @@
   <title>React</title>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="bundle.js"></script>
+
+<form action="/api/images" method="POST" enctype="multipart/form-data">
+  <input type="file" name="myfile" id="">
+  <button>Upload</button>
+</form>
+
+  <!-- <div id="root"></div>
+  <script src="bundle.js"></script> -->
 </body>
 </html
