--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<form action="/api/images" method="POST" enctype="multipart/form-data">
+<!-- <form action="/api/images" method="POST" enctype="multipart/form-data">
   <input type="file" name="myfile" id="">
   <button>Upload</button>
-</form>
+</form> -->
 
-  <!-- <div id="root"></div>
-  <script src="bundle.js"></script> -->
+  <div id="root"></div>
+  <script src="bundle.js"></script>
 </body>
-</html
+</html>
